--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
-    "next": "13.5.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.20.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.5",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
