--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "keen-slider": "^6.8.6",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
