--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
-    "keen-slider": "^6.8.6",
     "formik": "^2.4.5",
+    "keen-slider": "^6.8.6",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.20.0",
+    "styled-components": "^6.1.8",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
