--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "keen-slider": "^6.8.6",
     "next": "^14.1.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.20.0",
