--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
@@ -32,6 +34,7 @@
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10",
+    "daisyui": "^4.7.2",
     "eslint": "^8",
     "eslint-config-next": "^14.1.0",
     "postcss": "^8",
