--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
     "formik": "^2.4.5",
     "keen-slider": "^6.8.6",
     "next": "^14.1.0",
@@ -25,6 +27,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.20.0",
     "styled-components": "^6.1.8",
+    "tailwind-scrollbar": "^3.1.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
