--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
     "@mui/icons-material": "^5.14.16",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
     "formik": "^2.4.5",
@@ -20,6 +23,7 @@
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.0",
     "tailwind-scrollbar": "^3.1.0",
     "uuid": "^9.0.1",
