--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.0",
+    "react-scroll": "^1.9.0",
     "tailwind-scrollbar": "^3.1.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
@@ -33,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
+    "@types/react-scroll": "^1.8.10",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10",
     "eslint": "^8",
