--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.18",
     "@mui/icons-material": "^5.14.16",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "flowbite": "^2.3.0",
@@ -21,11 +22,13 @@
     "formik": "^2.4.5",
     "keen-slider": "^6.8.6",
     "next": "^14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.0",
     "react-scroll": "^1.9.0",
+    "sonner": "^1.4.41",
     "tailwind-scrollbar": "^3.1.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
