--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "react-scroll": "^1.9.0",
     "sonner": "^1.4.41",
     "tailwind-scrollbar": "^3.1.0",
+    "url-parse": "^1.5.10",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^20",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@types/react-scroll": "^1.8.10",
+    "@types/url-parse": "^1.4.11",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10",
     "eslint": "^8",
