--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.0",
